center content with flex and fix sticky footer on iOS

--- a/src/styles/Application.css
+++ b/src/styles/Application.css
@@ -1,4 +1,4 @@
-html, body, .application {
+html {
   height: 100%;
 }
 
@@ -12,6 +12,8 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0.9);
 
   font-weight: 100;
+  min-height: 100%;
+  height: 0;
 }
 
 @media(max-width: 1000px) {
@@ -35,8 +37,12 @@ strong {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  min-height: 100%;
 }
 
 .main-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   flex-grow: 1;
 }
