--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   margin: 2em;
-  color: #999;
+  color: #777;
   border-bottom: 1px solid transparent;
   transition: .1s ease-out-cubic;
 }
