--- a/src/styles/MarketValue.css
+++ b/src/styles/MarketValue.css
@@ -1,6 +1,6 @@
 .market-value {
   font-size: 1.5em;
-  margin: 2em auto;
+  margin: 2em auto 4em;
   line-height: 1.8;
   max-width: 28em;
   padding: 0 1em;
